--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "react": "^16.5.2",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
+    "react-quill": "^1.3.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
-    "styled-components": "^3.4.9"
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.0",
+    "semantic-ui-react": "^0.82.5",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
