--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@atlaskit/css-reset": "^3.0.2",
+    "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "react": "^16.5.2",
     "react-beautiful-dnd": "^9.0.2",
